<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/status_main"
    android:layout_marginTop="@dimen/margin_layout_1"
    android:layout_marginStart="@dimen/margin_layout_2"
    android:layout_marginEnd="@dimen/margin_layout_2"
    >
    <TextView
        android:text="@string/label_status_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_gravity="center"
        >
    </TextView>
    <TextView
        android:id="@+id/bluetooth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_status_bluetooth_text"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/bluetooth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_status_bluetooth_text"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/bluetooth_no_device"
        android:text="@string/info_no_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_status_bluetooth_text"
        />
    <Button
        android:id="@+id/bluetooth_operation"
        android:layout_width="@dimen/width_btn"
        android:layout_height="@dimen/height_btn"
        android:background="@drawable/btn_round"
        android:layout_marginStart="@dimen/margin_status_bluetooth_text"
        android:text="@string/btn_set"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size"
        />
</LinearLayout>