<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:paddingStart="@dimen/padding_layout_2"
    android:paddingEnd="@dimen/padding_layout_2"
    android:paddingTop="@dimen/padding_layout_1"
    tools:showIn="@layout/content_data">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/read_value"
        android:orientation="vertical"
        >
        <!--<RadioGroup
            android:id="@+id/radiogroup_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radio_showScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_show_now"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/radio_saveFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_save_file"
                />
        </RadioGroup>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:text="@string/receive_count"
                android:textColor="@color/colorBlack" />
            <TextView
                android:text="@string/init_count"
                android:id="@+id/receive_count"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|start"
                android:textColor="@color/colorBlack" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/receive_speed"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:id="@+id/receive_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start|center"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:text="@string/init_speed"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                />
            <com.suke.widget.SwitchButton
                android:id="@+id/receive_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:checked="true"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:sb_checked_color="@color/colorPrimary"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/receive_notify"
                android:textColor="@color/colorBlack"
                android:visibility="gone"
                />
            <com.suke.widget.SwitchButton
                android:id="@+id/char_details_notification_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:visibility="gone"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"

                >
                <LinearLayout
                    android:id="@+id/ll_receive_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="@dimen/margin_layout_20"
                    android:visibility="gone"
                    >
                    <TextView
                        android:id="@+id/receive_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        />
                    <Button
                        android:id="@+id/receive_share"
                        android:layout_width="@dimen/width_btn_data_70"
                        android:layout_height="@dimen/height_btn_data_30"
                        android:background="@drawable/btn_round"
                        android:layout_gravity="center|end"
                        android:text="@string/share"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size"
                        >

                    </Button>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/receive_set"
                android:layout_width="@dimen/width_btn_data_70"
                android:layout_height="@dimen/height_btn_data_30"
                android:background="@drawable/btn_round"
                android:layout_gravity="center|end"
                android:text="@string/btn_set_receive"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:enabled="false"
                >

            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerLayout_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_layout_1"
            >
            <TextView
                android:id="@+id/receive_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorBlack"
                android:gravity="start|top"
                android:fadeScrollbars="false"
                android:focusable="true"
                android:scrollbars="vertical"
                android:focusableInTouchMode="true"
                android:background="@drawable/tv_round"

                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_saveFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_save_file"
                android:textColor="@color/colorBlack"
                android:layout_gravity="top"
                />
            <TextView
                android:id="@+id/saveFilePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >



            <Button
                android:id="@+id/clear_receive"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/width_btn"
                android:layout_height="@dimen/height_btn"
                android:layout_gravity="center"
                android:background="@drawable/btn_round"
                android:text="@string/clear"
                android:textColor="@color/colorWhite"
                android:enabled="false"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                >
            </LinearLayout>
            <Button
                android:id="@+id/receive_share_data"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/width_btn"
                android:layout_height="@dimen/height_btn"
                android:layout_gravity="center"
                android:background="@drawable/btn_round"
                android:text="@string/share_data"
                android:textColor="@color/colorWhite"
                android:enabled="false"
                />
            <Button
                android:id="@+id/read"
                android:layout_width="@dimen/width_btn"
                android:layout_height="@dimen/height_btn"
                android:layout_gravity="center"

                android:text="@string/read"
                android:background="@drawable/btn_round"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size"
                style="?android:attr/borderlessButtonStyle"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
