<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_layout_2"
    android:paddingEnd="@dimen/padding_layout_2"
    android:paddingTop="@dimen/padding_layout_1"
    android:paddingBottom="@dimen/padding_layout_1"
    android:id="@+id/ll_send"
    >

    <LinearLayout
        android:id="@+id/write_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_layout_1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_count"
                android:layout_gravity="center"
                android:textColor="#000000"
                />
            <TextView
                android:text="@string/init_send"
                android:id="@+id/send_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_speed"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:id="@+id/send_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start|center"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/init_speed"
                />
            <TextView
                android:id="@+id/toggle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format"
                android:layout_gravity="center"
                android:textColor="#000000"
                />
            <com.suke.widget.SwitchButton
                android:id="@+id/send_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:checked="true"
                android:text=""
                android:textOff=""
                android:textOn=""
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:sb_checked_color="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/send_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="单次发送"
                />
            <Button
                android:id="@+id/send_set"
                android:layout_width="@dimen/width_btn_data_70"
                android:layout_height="@dimen/height_btn_data_30"
                android:background="@drawable/btn_round"
                android:layout_gravity="center|end"
                android:text="@string/btn_set_send"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:enabled="false"
                />
        </LinearLayout>
       <!-- <LinearLayout
            android:id="@+id/linerLayout_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout_1"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/send_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    />
                <EditText
                    android:id="@+id/send_interval"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"

                    android:gravity="center"
                    android:hint="@string/interval_default"
                    />
                <TextView
                    android:text="@string/interval_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>
        </LinearLayout>-->
        <LinearLayout
            android:id="@+id/linerLayout_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout_1"
            >
            <EditText
                android:id="@+id/send_data"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColor="@color/colorBlack"
                android:gravity="start|top"
                android:background="@drawable/tv_round"
                android:hint="@string/send_hint"
                android:text="1234567890"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout_1"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_gravity="center"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/progress_height"
                    android:progress="0"
                    android:max="100"
                    android:background="#DCD8D8"
                    android:progressDrawable="@drawable/progress_background"
                    />
                <TextView
                    android:id="@+id/progress_value"
                    android:text="0%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_layout_1"
            >

            <Button
                android:id="@+id/clear_write"
                android:layout_width="@dimen/width_btn"
                android:layout_height="@dimen/height_btn"
                android:layout_gravity="center"
                android:text="清空"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_round"
                style="?android:attr/borderlessButtonStyle"
                android:enabled="false"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                >
            </LinearLayout>
            <Button
                android:id="@+id/write"
                android:layout_width="@dimen/width_btn"
                android:layout_height="@dimen/height_btn"
                android:layout_gravity="center"
                android:text="@string/send"
                android:background="@drawable/btn_round"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size"
                style="?android:attr/borderlessButtonStyle"
                android:enabled="false"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
