<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="@dimen/width_250"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout_2"
        android:background="@drawable/ll_round"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_layout_2"
            android:layout_marginStart="@dimen/margin_layout_2"
            android:layout_marginEnd="@dimen/margin_layout_2"
            android:layout_marginBottom="@dimen/margin_15"

            >
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="接收配置"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroup_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            >
            <RadioButton
                android:id="@+id/radio_showScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_clear"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/radio_showScreen_no_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_no_clear"

                />
            <RadioButton
                android:id="@+id/radio_showScreen_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_pause"
                />
            <RadioButton
                android:id="@+id/radio_saveFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_save_file"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_layout_1"
            android:layout_marginStart="@dimen/margin_layout_2"
            android:layout_marginEnd="@dimen/margin_layout_2"
            android:id="@+id/ll_save_input"
            android:layout_gravity="center"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/file_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"

                android:singleLine="true"
                android:hint="输入文件名称"
                android:digits="@string/input_digital"
                android:maxLines="1"
                android:textColor="#000000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=".log"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginStart="@dimen/margin_layout_2"
            android:layout_marginEnd="@dimen/margin_layout_2"

            >
            <Button
                android:id="@+id/cancel"
                android:layout_width="@dimen/width_btn_data_70"
                android:layout_height="@dimen/height_btn_data_30"
                android:layout_gravity="center"
                android:text="取消"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_round"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="@dimen/text_size_small"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                >
            </LinearLayout>
            <Button
                android:id="@+id/confirm"
                android:layout_width="@dimen/width_btn_data_70"
                android:layout_height="@dimen/height_btn_data_30"
                android:layout_gravity="center"
                android:text="确定"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_round"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="@dimen/text_size_small"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
